styling adjusted for userprofileedit: textarea should be ok on mobile, and alignment fixed

--- a/less/globals.less
+++ b/less/globals.less
@@ -25,6 +25,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 .altBg {
